kubernetes/stripprefix.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: picklistupdater-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /picklistupdater
