kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: smartsheet-picklist-updater
  namespace: internal-tooling
spec:
  selector:
    app: smartsheet-picklist-updater
  ports:
    - port: 8000
