kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartsheet-picklist-updater
  namespace: internal-tooling
  annotations:    
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/revision-history-limit: "3"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: picklist.pscp-css.support
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: smartsheet-picklist-updater
            port:
              number: 8000
      - path: "/*"
        pathType: Prefix
        backend:
          service:
            name: smartsheet-picklist-updater
            port:
              number: 8000
  tls:
    - hosts:
      - picklist.pscp-css.support
      secretName: picklist.pscp-css.support
